Fixed alignment issue
Added new alignment and box (this one cant flex)

--- a/HedgeHerd/slider.css
+++ b/HedgeHerd/slider.css
@@ -9,7 +9,7 @@ body {
 
 .header {
   background-color: #3b82f6;
-  padding: 30px;
+  padding: 20px;
   text-align: left;
 }
 
